[gd_scene load_steps=4 format=3 uid="uid://c21gxi1o2bve6"]

[ext_resource type="Script" path="res://Scenes/Entities/Weapons/bullet.gd" id="1_r7e52"]
[ext_resource type="AudioStream" uid="uid://chnkdf47m8i81" path="res://Assets/Sounds/Effects/hitHurt.wav" id="2_rb2bx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7wbx"]
size = Vector2(5, 2)

[node name="Bullet" type="CharacterBody2D"]
modulate = Color(100, 39.46, 0, 1)
self_modulate = Color(1.8, 1.6, 1, 1)
z_index = 5
y_sort_enabled = true
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_r7e52")
speed = 500

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = -1.0
offset_right = 5.0
offset_bottom = 1.0

[node name="Area2D" type="Area2D" parent="."]
y_sort_enabled = true
collision_layer = 5
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 0)
shape = SubResource("RectangleShape2D_m7wbx")

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rb2bx")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
